--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -173,12 +173,13 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
-                        <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                        <div>+1 (555) 123-4567</div>
+                        <i class="fas fab fa-whatsapp-square fa-3x mb-3 text-muted"></i>
+                        <div></div>
+                        <a class="d-block" href="https://web.whatsapp.com/send?phone=5549999191709&amp;text=Olá,%20gostaria%20de%20um%20orçamento"></a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
-                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:contact@yourwebsite.com">contact@yourwebsite.com</a>
+                        ><!-- Make sure to change the email address in BOTH the anchor text and the link target below!--><a class="d-block" href="mailto:victor.costa.melo@hotmail.com">victor.costa.melo@hotmail.com</a>
                     </div>
                 </div>
             </div>
