--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -175,7 +175,7 @@
                     <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
                         <i class="fas fab fa-whatsapp-square fa-3x mb-3 text-muted"></i>
                         <div></div>
-                        <a class="d-block" href="https://web.whatsapp.com/send?phone=5549999191709&amp;text=Olá,%20gostaria%20de%20um%20orçamento"></a>
+                        <a class="d-block" href="https://web.whatsapp.com/send?phone=5549999191709&amp;text=Olá,%20gostaria%20de%20um%20orçamento">click para dizer: - Ola!</a>
                     </div>
                     <div class="col-lg-4 mr-auto text-center">
                         <i class="fas fa-envelope fa-3x mb-3 text-muted"></i
