--- a/src/pug/index.html
+++ b/src/pug/index.html
@@ -92,7 +92,7 @@
                         <div class="mt-5">
                             <i class="fas fa-4x fa-heart text-primary mb-4"></i>
                             <h3 class="h4 mb-2">Aplicativos Mobile</h3>
-                            <p class="text-muted mb-0">A facilidade da soução na palma da mão!</p>
+                            <p class="text-muted mb-0">A facilidade da solução na palma da mão!</p>
                         </div>
                     </div>
                 </div>
